# filter_bay

./: .gitignore  CMakeLists.txt  README.md  filter_bayConfig.cmake.in  package.xml
include/filter_bay/kalman_filter/: kalman_filter.h  kalman_filter.hpp
include/filter_bay/model/: depth_observation_model.h  depth_observation_model.hpp  gaussian_observation_model.h  gaussian_observation_model.hpp  linear_transition_model.h  movement_state.h
include/filter_bay/particle_filter/: log_particle_filter.hpp  particle.h  particle_filter.h  particle_filter.hpp  particle_model.hpp
include/filter_bay/tracker/: impedance_tracker.h  impedance_tracker.hpp
include/filter_bay/utility/: log_arithmetics.h  log_arithmetics.hpp  normal_sampler.hpp  uniform_random.hpp
test/: filter_test_values.py  gaussian_observation_test.cpp  impedance_tracker_test.cpp  kalman_filter_test.cpp  linear_transition_test.cpp  log_particle_filter_test.cpp  normal_sampler_test.cpp  particle_filter_test.cpp
